@@ -8,5 +8,5 @@
 # script is sourced, the variable $dir must contain the
 # full path name of this file's directory.
 
-if { ![package vsatisfies [package provide Tcl] 8.3] } { return }
+if { ![package vsatisfies [package provide Tcl] 8.4] } { return }
 package ifneeded inifile 0.1 [list source [file join $dir ini.tcl]]
