@@ -1,0 +1,15 @@
+[emptysection]
+
+; a comment for section 1
+
+[section1]
+key=value
+testkey=hi
+
+[section2]
+; key comment
+key=othervalue
+
+
+[{test]
+}key   =    $blah
