@@ -1,3 +1,11 @@
+2003-07-15  Andreas Kupries  <andreask@pliers.activestate.com>
+
+	* ini.tcl: Got a rewritten system from Aaron.
+	* ini.man: Updated the documentation.
+
+	* infile.test: New testsuite for module.
+	* test.ini:
+
 2003-07-04  Andreas Kupries <andreas_kupries@users.sourceforge.net>
 
 	* ini.tcl: Added a comment header for RCS id, copyright notices,
